cluster/apps/miniflux/miniflux.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: miniflux-deployment
  namespace: miniflux
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: miniflux
  template:
    metadata:
      labels:
        app: miniflux
    spec:
      containers:
        - name: miniflux
          image: miniflux/miniflux:2.2.8
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux-service
  namespace: miniflux
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8080
      port: 8080
      protocol: TCP
  selector:
    app: miniflux
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniflux-ingress
  namespace: miniflux
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: 4096
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: miniflux.${SECRET_INTERNAL_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniflux-service
                port:
                  number: 8080
  tls:
    - hosts:
        - miniflux.${SECRET_INTERNAL_DOMAIN_NAME}
      secretName: miniflux-tls
